GNOME Bugzilla – Bug 752210
gdbus command crashes with SIGSEGV
Last modified: 2015-07-27 11:54:19 UTC
It just crashes when I run it. This problem is always reproducible. $ gdbus Segmentation fault (core dumped) Backtrace:
+ Trace 235248
context->main_group is NULL at goption.c:859.
confirmed : in goption.c:859: g_option_context_get_help : p context->main_group $2 = (GOptionGroup *) 0x0