GOptionContext: Don't crash without main group

This was introduced in 126c685f4aa and caused e.g. gdbus
to crash when called without arguments.

https://bugzilla.gnome.org/show_bug.cgi?id=752210